--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pirple node.js masterclass GUI</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-  </body>
-</html>
+<h1>{body.title}</h1>
