chore: update index page and template metadata

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -10,7 +10,7 @@
     <title>{head.title} | {global.appName}</title>
   
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/vnd.microsoft.icon" />
-    <script type="text/javascript" charset="utf-8" src="./public/script.js"></script>
+    <script type="module" charset="utf-8" src="./public/script.js"></script>
     <link rel="stylesheet" type="text/css" href="./public/styles.css" />
   </head>
   <body class="{body.class}">
