--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -8,16 +8,17 @@
     <meta name="description" content="{head.description}" />
     
     <title>{head.title} | {global.appName}</title>
-  
-    <link rel="shortcut icon" href="./public/favicon.ico" type="image/vnd.microsoft.icon" />
-    <script type="module" charset="utf-8" src="./public/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="./public/styles.css" />
+
+    <base href="{global.baseUrl}" />
+    <link rel="shortcut icon" href="/public/favicon.ico" type="image/vnd.microsoft.icon" />
+    <script type="module" charset="utf-8" src="/public/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="/public/styles.css" />
   </head>
   <body class="{body.class}">
     <div class="wrapper">
       <div class="header">
         <div class="logo" href="/">
-          <img src="./public/logo.png"/>
+          <img src="/public/logo.png"/>
         </div>
         <ul class="menu">
           <li>
