fix: path to logo file

--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -22,7 +22,7 @@
     <div class="wrapper">
       <div class="header">
         <a class="logo" href="/">
-          <img src="public/logo.png" alt="Logo" />
+          <img src="/public/logo.png" alt="Logo" />
         </a>
         <ul class="menu">
           <li><a href="/">Home</a></li>
